compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_imported_module_with_alias_and_unqualified_name_warnings_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 342
expression: "import rakun/one.{two} as three"
---
----- SOURCE CODE
import rakun/one.{two} as three

----- WARNING
warning: Unused imported value
  ┌─ /src/warning/wrn.rakun:1:19
  │
1 │ import rakun/one.{two} as three
  │                   ^^^ This imported value is never used

Hint: You can safely remove it.

warning: Unused imported module alias
  ┌─ /src/warning/wrn.rakun:1:24
  │
1 │ import rakun/one.{two} as three
  │                        ^^^^^^^^ This alias is never used

Hint: You can safely remove it.

    import rakun/one as _
