compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_pipeline_ending_with_variant_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub record Wibble<a> { Wibble(a) }\npub fn wibble(a) { a }\n\npub fn main() {\n  1 |> wibble |> Wibble\n  1\n}\n"
---
warning: Unused value
  ┌─ /src/warning/wrn.rakun:6:3
  │
6 │   1 |> wibble |> Wibble
  │   ^^^^^^^^^^^^^^^^^^^^^ This value is never used
