compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_record_access_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub record Thing {\n  Thing(value: Int)\n}\n\npub fn main() {\n  let thing = Thing(1)\n  thing.value\n  1\n}\n"
---
----- SOURCE CODE

pub record Thing {
  Thing(value: Int)
}

pub fn main() {
  let thing = Thing(1)
  thing.value
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.rakun:8:8
  │
8 │   thing.value
  │        ^^^^^^ This value is never used
