compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_record_update_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1246
expression: "\npub record Thing {\n  Thing(value: Int, other: Int)\n}\n\npub fn main() {\n  let thing = Thing(1, 2)\n  Thing(..thing, value: 1)\n  1\n}\n"
---
----- SOURCE CODE

pub record Thing {
  Thing(value: Int, other: Int)
}

pub fn main() {
  let thing = Thing(1, 2)
  Thing(..thing, value: 1)
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.rakun:8:3
  │
8 │   Thing(..thing, value: 1)
  │   ^^^^^^^^^^^^^^^^^^^^^^^^ This value is never used
