compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__warning_variable_never_used_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 52
expression: "\npub fn wibble() { Ok(5) }\npub fn main() { let five = wibble() }"
---
----- SOURCE CODE

pub fn wibble() { Ok(5) }
pub fn main() { let five = wibble() }

----- WARNING
warning: Unused variable
  ┌─ /src/warning/wrn.rakun:3:21
  │
3 │ pub fn main() { let five = wibble() }
  │                     ^^^^ This variable is never used

Hint: You can ignore it with an underscore: `_five`.
